// Copyright 2025 Joseph Cumines
//
// Window resource definition

syntax = "proto3";

package macosusesdk.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option go_package = "github.com/joeycumines/MacosUseSDK/gen/go/macosusesdk/v1;macosusesdkv1";
option java_multiple_files = true;
option java_outer_classname = "WindowProto";
option java_package = "com.macosusesdk.v1";

// A resource representing an individual window within an application.
// Contains only cheap CoreGraphics data. For expensive AX state queries,
// use GetWindowState to fetch the WindowState singleton sub-resource.
message Window {
  option (google.api.resource) = {
    type: "macosusesdk.localhost/Window"
    pattern: "applications/{application}/windows/{window}"
    singular: "window"
    plural: "windows"
  };

  // Resource name in the format "applications/{application}/windows/{window}"
  // where {application} is the process ID and {window} is the window ID.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // The title of the window.
  string title = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Bounding rectangle of the window.
  Bounds bounds = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Z-order index (higher values are in front).
  int32 z_index = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window is currently visible on screen.
  // This is a cheap property derived from CGWindowList (isOnScreen).
  // For expensive AX-based visibility state, use GetWindowState.
  bool visible = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Bundle identifier of the application that owns this window.
  // Resolved via NSRunningApplication. Empty string if unavailable.
  string bundle_id = 10 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// Bounding rectangle for window positioning.
message Bounds {
  // X coordinate of the window's origin.
  double x = 1;

  // Y coordinate of the window's origin.
  double y = 2;

  // Width of the window.
  double width = 3;

  // Height of the window.
  double height = 4;
}

// Detailed state information about a window, fetched via expensive AX queries.
// This is a singleton sub-resource that clients must explicitly request.
// Use GetWindowState to fetch this data on-demand.
message WindowState {
  option (google.api.resource) = {
    type: "macosusesdk.localhost/WindowState"
    pattern: "applications/{application}/windows/{window}/state"
    singular: "windowState"
    plural: "windowStates"
  };

  // Resource name in the format "applications/{application}/windows/{window}/state"
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // Whether the window can be resized.
  bool resizable = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window can be minimized.
  bool minimizable = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window can be closed.
  bool closable = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window is a modal dialog.
  bool modal = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window is a floating window.
  bool floating = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window is hidden according to AX attributes.
  // This is an expensive AX query, distinct from Window.visible (cheap CGWindowList).
  // True means the window is explicitly hidden via Accessibility attributes.
  bool ax_hidden = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window is minimized.
  bool minimized = 8 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window is focused.
  bool focused = 9 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Whether the window is in full-screen mode.
  // Optional: unset if the AX API does not provide a definitive answer.
  optional bool fullscreen = 10 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// Request to get the state of a window.
message GetWindowStateRequest {
  // The name of the window state resource to retrieve.
  // Format: applications/{application}/windows/{window}/state
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "macosusesdk.localhost/WindowState"}
  ];
}
